--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -2,18 +2,22 @@
     <div class="product_item-list">
         <a *ngFor="let item of items" class="product_item_link" routerLink="/produtos/{{item.id}}">
             <div>
-                <img [src]="item.imagem" alt="">
-                <h2 class="product_item_name">
-                    {{ item.descricao }}
-                </h2>
-                <p class="product_item_price">
-                    {{ item.preco | currency: "BRL" }}
-                </p>
-                <p class="product_item_price-status">
-                    {{ item.descricaoPreco }}
-                </p>
+                <span>
+                    <img [src]="item.imagem" alt="">
+                    <h2 class="product_item_name">
+                        {{ item.descricao }}
+                    </h2>
+                </span>
+                <span class="title-price">
+                    <p class="product_item_price">
+                        {{ item.preco | currency: "BRL" }}
+                    </p>
+                    <p class="product_item_price-status">
+                        {{ item.descricaoPreco }}
+                    </p>
+                </span>
             </div>
-            <button class="product_item_buy">Comprar</button>
-        </a>
+                <button class="product_item_buy">Comprar</button>
+            </a>
     </div>
 </section>
