--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-    <app-header></app-header>
-    <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<app-header></app-header>
+<router-outlet class="router-outlet"></router-outlet>
+<app-footer> </app-footer>
