--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -8,20 +8,21 @@ section{
 section form {
     height: 100%;
     display: block;
-    width: 400px;
-    margin-bottom: 20px;
-
+    max-width: 500px;
+    margin: 20px;
 }
 
 
 section  h2 {
     color: rgb(71, 71, 71);
-    font-size: 2.2rem;
+    font-size: 2.1rem;
+    text-indent: 1rem;
+    margin-bottom: -10px;
 }
 
 section form input {
     width: 100%;
-    height: 50px;
+    height: 45px;
     border: none;
     text-indent: 0.6rem;
     border: 1px solid rgba(0, 0, 0, 0.5);
@@ -60,4 +61,18 @@ section form button {
 small {
     text-indent: 1rem;
     color: brown;
+}
+
+address {
+    display: flex;
+    padding: 0 50px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+}
+
+iframe{
+    width: 100%;
+    height: 400px; 
+    border:0;
 }
