--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,6 +1,6 @@
 <section>
     <span>
-        <h2>Entre em contato</h2>
+        <h2>Entre em contato:</h2>
         <form [formGroup]="formContato">
             <input type="text" placeholder="Digite seu nome" formControlName="nome"
                 [class.valid]="formContato.controls['nome'].valid"
@@ -53,10 +53,10 @@
     <address>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3557.5752415767784!2d-49.07249608442773!3d-26.91697239986608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94df18c3b4a71d65%3A0xa5ec9dd8406a6a7!2sProWay!5e0!3m2!1spt-BR!2sbr!4v1676904073144!5m2!1spt-BR!2sbr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            allowfullscreen="true" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>
-            Tarumã Office - Rua 7 de Setembro, 1600 - 14º andar - Centro 89.010-204 - Blumenau / SC
+            Tarumã Office - Rua 7 de Setembro, 1600 - 14º andar Centro 89.010-204 - Blumenau / SC
         </p>
 
     </address>
