--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,38 +1,42 @@
 <header>
-    <a href="/"><h1>
-        <span>Exercice</span><span>Proway Ead</span>
-    </h1></a>
+    <a href="proway-computers">
+        <h1>
+            <span>Exercício&nbsp;</span><span class="title">ProwayEad</span>
+        </h1>
+    </a>
     <nav>
-        <ul>
-            <li>
-                <a href="/">Produtos</a>
-            </li>
-            <li>
-                <a>Carrinho</a>
-            </li>
-            <li>
-                <a href="contato">Contato</a>
-            </li>
-            <li>
-                <i class="fa-brands fa-facebook"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-instagram"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-twitter"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-linkedin"></i>
-            </li>
-        </ul>
+        <span class="links">
+            <ul>
+                <li>
+                    <a href="proway-computers/produtos">Produtos</a>
+                </li>
+                <li>
+                    <a>Carrinho</a>
+                </li>
+                <li>
+                    <a href="proway-computers/contato">Contato</a>
+                </li>
+            </ul>
+        </span>
+        <span class="links">
+            <ul>
+                <li>
+                    <i class="fa-brands fa-facebook"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-twitter"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-linkedin"></i>
+                </li>
+            </ul>
+        </span>
     </nav>
-    <form action="/produtos">
-        <input 
-            [value]="content"
-            name="titulo-produto" 
-            placeholder="Nome do produto"
-            >
+    <form action="proway-computers/produtos">
+        <input [value]="content" name="titulo-produto" placeholder="Nome do produto">
         <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
     </form>
 </header>
